// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfferItem should render correctly 1`] = `
<StatusCard
  action={
    {
      "callback": [Function],
      "icon": "search",
      "label": "looking for match",
    }
  }
  amount={
    [
      21000,
      210000,
    ]
  }
  date={2021-01-01T00:00:00.000Z}
  level="WAITING"
  title="P‑NAN"
/>
`;

exports[`OfferItem should render correctly if it's a past offer 1`] = `
<StatusCard
  action={
    {
      "callback": [Function],
      "icon": undefined,
      "label": undefined,
    }
  }
  amount={
    [
      21000,
      210000,
    ]
  }
  date={2021-01-01T00:00:00.000Z}
  icon={
    <Icon
      color="#EAE3DF"
      id="xCircle"
      style={
        {
          "height": 16,
          "width": 16,
        }
      }
    />
  }
  level="SUCCESS"
  theme="light"
  title="P‑NAN"
/>
`;
